cabo lovabe fix

--- a/luvanitrilica-main/index.html
+++ b/luvanitrilica-main/index.html
@@ -9,13 +9,11 @@
     <meta name="description" content="Luvas descartáveis certificadas ANVISA para restaurantes, clínicas e indústrias. Entrega em 24h São Paulo. Nitrílicas, plásticas e cirúrgicas.">
     <meta name="keywords" content="luvas descartáveis, luvas nitrílicas, ANVISA, restaurantes, clínicas, luvas plásticas, luvas cirúrgicas">
     <meta name="author" content="GloveTec">
-    <link rel="canonical" href="https://preview--gloveguard-landing.lovable.app/">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="GloveTec - Luvas Descartáveis Certificadas ANVISA">
     <meta property="og:description" content="Luvas profissionais com entrega em 24h para São Paulo. Certificação ANVISA garantida.">
     <meta property="og:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/9hE51zoNyDVS3kjCCpp50CVgjZ02/social-images/social-1757938937568-logo-glovetec.jpg">
-    <meta property="og:url" content="https://preview--gloveguard-landing.lovable.app/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="pt_BR">
     <meta property="og:site_name" content="GloveTec">
@@ -33,8 +31,8 @@
       "@type": "Organization",
       "name": "GloveTec",
       "description": "Luvas descartáveis certificadas ANVISA para uso profissional",
-      "url": "https://preview--gloveguard-landing.lovable.app/",
-      "logo": "https://preview--gloveguard-landing.lovable.app/logo-glovetec.png",
+      "url": "https://luvanitrilica.com.br/",
+      "logo": "https://luvanitrilica.com.br/logo-glovetec.png",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+55-11-96192-5723",
