google tag manager added

--- a/luvanitrilica-main/index.html
+++ b/luvanitrilica-main/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/9hE51zoNyDVS3kjCCpp50CVgjZ02/uploads/1757939197838-ChatGPT Image 15 de set. de 2025, 09_26_27.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     
+    <!-- Google Tag Manager -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-629944365"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-629944365');
+    </script>
+    
     <!-- SEO Meta Tags -->
     <meta name="description" content="Luvas descartáveis certificadas ANVISA para restaurantes, clínicas e indústrias. Entrega em 24h São Paulo. Nitrílicas, plásticas e cirúrgicas.">
     <meta name="keywords" content="luvas descartáveis, luvas nitrílicas, ANVISA, restaurantes, clínicas, luvas plásticas, luvas cirúrgicas">
